@@ -24,6 +24,6 @@ Checks: >-
   -readability-implicit-bool-conversion, # TODO: to be removed
 CheckOptions:
   - key: readability-function-cognitive-complexity.Threshold
-    value: 300
+    value: 500
 HeaderFilterRegex: 'include'
 UseColor: true
