@@ -17,7 +17,6 @@
 
 #include "Calculators/ACalcInterpolator.hpp"
 
-
 namespace gstlrn
 {
 
@@ -27,14 +26,14 @@ class KrigingSystem;
 class GSTLEARN_EXPORT Global_Result
 {
 public:
-  int ntot; // Total Number of Data
-  int np;   // Number of active Data
-  int ng;   // Number of grid nodes for Domain discretization
-  double surface; // Surface of Domain
-  double zest;    // Estimate
-  double sse;     // Standard deviation of estimation
-  double cvgeo;   // Coefficient of Variation
-  double cvv;     // Variance of Domain
+  int ntot;             // Total Number of Data
+  int np;               // Number of active Data
+  int ng;               // Number of grid nodes for Domain discretization
+  double surface;       // Surface of Domain
+  double zest;          // Estimate
+  double sse;           // Standard deviation of estimation
+  double cvgeo;         // Coefficient of Variation
+  double cvv;           // Variance of Domain
   VectorDouble weights; // Weights attached to data
 
   /// Has a specific implementation in the Target language
@@ -44,10 +43,10 @@ public:
 class GSTLEARN_EXPORT CalcGlobal: public ACalcInterpolator
 {
 public:
-  CalcGlobal(int ivar0 = 0,
+  CalcGlobal(int ivar0    = 0,
              bool verbose = false);
-  CalcGlobal(const CalcGlobal &r) = delete;
-  CalcGlobal& operator=(const CalcGlobal &r) = delete;
+  CalcGlobal(const CalcGlobal& r)            = delete;
+  CalcGlobal& operator=(const CalcGlobal& r) = delete;
   virtual ~CalcGlobal();
 
   void setFlagArithmetic(bool flagArithmetic) { _flagArithmetic = flagArithmetic; }
@@ -68,21 +67,21 @@ private:
 private:
   bool _flagArithmetic;
   bool _flagKriging;
-  int    _ivar0;
-  bool   _verbose;
+  int _ivar0;
+  bool _verbose;
   Model* _modelLocal;
 
   Global_Result _gRes;
 };
 
-GSTLEARN_EXPORT Global_Result global_arithmetic(Db *dbin,
-                                                DbGrid *dbgrid,
-                                                ModelGeneric *model,
-                                                int ivar0,
-                                                bool verbose);
-GSTLEARN_EXPORT Global_Result global_kriging(Db *dbin,
-                                             Db *dbout,
-                                             ModelGeneric *model,
-                                             int ivar0,
-                                             bool verbose);
-}
+GSTLEARN_EXPORT Global_Result global_arithmetic(Db* dbin,
+                                                DbGrid* dbgrid,
+                                                ModelGeneric* model,
+                                                int ivar0    = 0,
+                                                bool verbose = false);
+GSTLEARN_EXPORT Global_Result global_kriging(Db* dbin,
+                                             Db* dbout,
+                                             ModelGeneric* model,
+                                             int ivar0    = 0,
+                                             bool verbose = false);
+} // namespace gstlrn
