@@ -1,0 +1,92 @@
+
+Data Base Characteristics
+=========================
+
+Data Base Summary
+-----------------
+File is organized as a set of isolated points
+Space dimension              = 2
+Number of Columns            = 4
+Total number of samples      = 10
+
+Variables
+---------
+Column = 0 - Name = rank - Locator = NA
+Column = 1 - Name = x-1 - Locator = x1
+Column = 2 - Name = x-2 - Locator = x2
+Column = 3 - Name = z - Locator = z1
+
+Data Base Grid Characteristics
+==============================
+
+Data Base Summary
+-----------------
+File is organized as a regular grid
+Space dimension              = 2
+Number of Columns            = 3
+Total number of samples      = 25
+
+Grid characteristics:
+---------------------
+Origin :      0.000     0.000
+Mesh   :      0.200     0.200
+Number :          5         5
+
+Variables
+---------
+Column = 0 - Name = rank - Locator = NA
+Column = 1 - Name = x1 - Locator = x1
+Column = 2 - Name = x2 - Locator = x2
+
+Model characteristics
+=====================
+Space dimension              = 2
+Number of variable(s)        = 1
+Number of basic structure(s) = 1
+Number of drift function(s)  = 0
+Number of drift equation(s)  = 0
+
+Covariance Part
+---------------
+Spherical
+- Sill         =      1.000
+- Range        =      0.300
+Total Sill     =      1.000
+Known Mean(s)     0.000
+
+Global estimation by arithmetic average
+---------------------------------------
+Total number of data             = 10
+Number of active data            = 10
+Sample variance                  = 1.137649
+CVsample                         = 16.682853
+CViid                            = 5.275581
+Cxx                              = 0.207223
+Cxv                              = 0.053449
+Cvv                              = 0.059393
+Estimation by arithmetic average = 0.063934
+Estimation St. dev. of the mean  = 0.399648
+CVgeo                            = 6.250923
+Surface                          = 1.000000
+Q (Estimation * Surface)         = 0.063934
+
+Printing some results from the Output structure
+Number of weights =  10
+Weights =  [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]
+
+Global estimation kriging
+-------------------------
+Total number of data             = 10
+Number of active data            = 10
+Number of variables              = 1
+Cvv                              = 0.059392
+Estimation by kriging            = 0.006263
+Estimation St. Dev. of the mean  = 0.205082
+CVgeo                            = 32.742863
+Surface                          = 1.000000
+Q (Estimation * Surface)         = 0.006263
+
+Printing some results from the Output structure
+Number of weights =  10
+Weights =  [0.02354868 0.03754362 0.04370817 0.04285175 0.01465401 0.04506939
+ 0.00451891 0.04878589 0.05321501 0.01313461]
